Fixes after running the code and getting it ready for submission